--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
-    <link rel="stylesheet" href="/music.css">
+    <link rel="stylesheet" href="music.css">
 
     <!-- font awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>   
-    <audio src="/music/alan-walker-alone.mp3" controls id="music"></audio>
+    <audio src="l
+music/alan-walker-alone.mp3" controls id="music"></audio>
 
         <div class="playlists togglePlaylist" id="playlist">
             <h2 id="title">Your Playlist</h2></h1>
@@ -45,7 +46,7 @@
 
                 <div class="song-profile">
                     <h2 id="song-name">alan-walker-alone</h2>
-                    <img src="/images/alanWalker.jpg" alt="" id="song-img">
+                    <img src="images/alanWalker.jpg" alt="" id="song-img">
                 </div>  
 
                 <input type="range" min="0" max="100" id="progress" value="0" step="1">
@@ -73,6 +74,6 @@
         </div>
 
 
-        <script src="/music.js"></script>
+        <script src="music.js"></script>
 </body>
 </html>
